--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -43,9 +43,15 @@ dependencies:
   intl_translation: ^0.20.0
   shared_preferences: ^2.3.2
   intl_utils: ^2.8.7
-  cloud_firestore: ^5.4.3
+  cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.1
   firebase_app_check: ^0.3.1+3
+  equatable: ^2.0.5
+  firebase_storage: ^12.3.2
+  google_sign_in: ^6.2.1
+  geolocator: ^13.0.1
+  sign_button: ^2.0.6
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +74,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
