--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   geolocator: ^13.0.1
   sign_button: ^2.0.6
   loading_animation_widget: ^1.3.0
+  persistent_bottom_nav_bar: ^6.2.1
+  flutter_snake_navigationbar: ^0.6.1
 
 dev_dependencies:
   flutter_test:
