--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   loading_animation_widget: ^1.3.0
   persistent_bottom_nav_bar: ^6.2.1
   flutter_snake_navigationbar: ^0.6.1
+  curved_navigation_bar: ^1.0.6
+  animated_bottom_navigation_bar: ^1.3.3
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
