--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   animated_bottom_navigation_bar: ^1.3.3
   salomon_bottom_bar: ^3.3.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
