--- a/route_app/android/app/src/main/AndroidManifest.xml
+++ b/route_app/android/app/src/main/AndroidManifest.xml
@@ -5,12 +5,15 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- Eğer arka planda konum erişimi istiyorsanız bu izni ekleyin -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:label="route_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
