--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   salomon_bottom_bar: ^3.3.2
   image_picker: ^1.1.2
+  path: ^1.9.0
+  table_calendar: ^3.1.2
+  google_maps_flutter: ^2.9.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +87,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/data/data.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
