sesli ikaz eklendi.arama ekranındaki hatalar giderildi.sistem iyileştirildi hatalar giderildi.lokasyon kontrolü eklendi.

--- a/route_app/android/app/src/main/AndroidManifest.xml
+++ b/route_app/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:label="Accesible Route"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyApjXIvHNWIphhz7iUGdbXZFpuxzTGaQfI"/>
