--- a/route_app/pubspec.yaml
+++ b/route_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: ^3.5.3
@@ -71,6 +71,7 @@ dependencies:
   flutter_native_splash: ^2.4.2
   icons_launcher: ^3.0.0
   share_plus: ^10.1.1
+  flutter_tts: ^4.0.2
 
 
 dev_dependencies:
@@ -117,6 +118,7 @@ flutter:
     - .env
     - flutter_native_splash.yaml
     - shorebird.yaml
+    - assets/images/icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
